#
# http://www.cybop.net
# - Cybernetics Oriented Programming -
#
# @version $RCSfile: ChangeLog,v $ $Revision: 1.147 $ $Date: 2009-10-06 21:25:26 $ $Author: christian $
# @author Christian Heller <christian.heller@tuxtax.de>
#

2010-11-14  Christian Heller  <christian.heller@tuxtax.de>
        * Make "ui_control" standard example work again

2010-11-13  Christian Heller  <christian.heller@tuxtax.de>
        * Debug file "creating_memoriser.c", where abstraction was decoded a second time
            and assign runtime abstraction instead

2010-11-12  Christian Heller  <christian.heller@tuxtax.de>
        * Debug runtime errors
        * Make standard application examples work again

2010-11-11  Christian Heller  <christian.heller@tuxtax.de>
        * Continue replacing integer-based memory abstraction constants in cyboi with wide characters
        * Correct compilation errors caused by new primitive abstraction constants;
            include file "constant/abstraction/memory/primitive_memory_abstraction.c" where necessary

2010-11-10  Christian Heller  <christian.heller@tuxtax.de>
        * Continue replacing integer-based memory abstraction constants in cyboi with wide characters

2010-11-09  Christian Heller  <christian.heller@tuxtax.de>
        * Replace integer-based memory abstraction constants in cyboi with wide characters;
            see files "constant/abstraction/memory/memory_abstraction.c"
            and "constant/abstraction/memory/primitive_memory_abstraction.c";
            it is true, integer numbers are more efficient when processed in cyboi;
            they have been applied, but the problem is, that runtime abstractions
            are also used in cybol applications, e.g. in operation "add", "copy", "create";
            if having integers, then cybol application developers would have to learn
            which number references which abstraction (type);
            even worse, the assignment of numbers to abstraction constants may change,